# pydesignflow

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
docs/: blocks_actions.rst  conf.py  design_decisions.rst  design_principles.rst  filemgmt.rst  index.rst  introduction.rst  reference.rst  requirements.txt  sphinx_ext.rst  tests.rst  todo.rst
docs/tests/: flow_example1.rst  index.rst
docs/tests/figs/: example_block.dot
pydesignflow/: __init__.py  ansiterm.py  block.py  cli.py  errors.py  filemgmt.py  flow.py  libset.py  monitor.py  result.py  session.py  shortcut.py  sphinx_ext.py  target.py  task.py  version.py
pydesignflow/tests/: example_block.py  test_dependency_list.py  test_multiple_blocks.py  test_single_block.py
tests/: test_cli.py  test_dependency_list.py  test_exitcode.py  test_filemgmt.py  test_multiple_blocks.py  test_result.py  test_single_block.py
tests/flow_example1/: __init__.py  example_block.py
